# pg-playground

./: Makefile  config.sh  cspell.json  docker-compose.yml  load_data.ipynb  load_swda_data.py  package.json  plot_bbands.ipynb  pyproject.toml  shmig.conf
migrations/: 1731258129-create_euro_countries_table.sql  1731260305-load_european_economies_data.sql  1731260681-add-anon.sql  1731261053-add-uuid.sql  1731261131-country-subregions.sql  1731261264-add-subregions.sql  1731768789-add-swda-table.sql
